Css for recommendation

--- a/main.css
+++ b/main.css
@@ -306,6 +306,14 @@ img{
     height: 450px;
 }
 
+#recommandation-message {
+    padding: 0.4rem;
+    margin: 0 0.4rem;
+    border-radius: 3px;
+    font-weight: 600;
+
+}
+
 @media (max-width: 800px) {
     #trailer-container iframe {
       width: 100%;
